cmake_minimum_required(VERSION 3.28.3)
project(fund)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(lab1-1)
add_subdirectory(lab1-2)
add_subdirectory(lab1-3)
add_subdirectory(lab1-4)
add_subdirectory(lab1-5)
add_subdirectory(lab1-6)
add_subdirectory(lab2)
add_subdirectory(sys2)